# sjtu_drone

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  package.xml  run_docker.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: CI_CD.yml  build.yml
include/: drone_object_ros.h  pid_controller.h  plugin_drone.h  plugin_ros_cam.h  plugin_ros_imu.h  plugin_ros_imu_native.h  plugin_ros_sonar.h  sensor_model.h  util_ros_cam.h
launch/: start.launch
models/sjtu_drone/: sjtu_drone.sdf
sjtu_drone_bringup/: package.xml  setup.py
sjtu_drone_bringup/config/: drone.yaml
sjtu_drone_bringup/launch/: sjtu_drone_bringup.launch.py  sjtu_drone_gazebo.launch.py  spawn_sjtu_drone.launch.py
sjtu_drone_bringup/rviz/: rviz.rviz
sjtu_drone_bringup/scripts/: reset_sim.sh
sjtu_drone_bringup/sjtu_drone_bringup/: spawn_drone.py
sjtu_drone_bringup/test/: test_copyright.py  test_flake8.py
sjtu_drone_control/: package.xml  setup.cfg  setup.py
sjtu_drone_control/sjtu_drone_control/: Readme.md  drone_position_control.py  open_loop_control.py  teleop.py  teleop_joystick.py
sjtu_drone_control/sjtu_drone_control/drone_utils/: controllers.py  drone_object.py
sjtu_drone_control/test/: test_pep257.py
sjtu_drone_description/: CMakeLists.txt  README.md  package.xml
sjtu_drone_description/include/: pid_controller.h  plugin_drone.h
sjtu_drone_description/include/sjtu_drone_description/: pid_controller.h  plugin_drone.h  plugin_drone_private.h
sjtu_drone_description/models/sjtu_drone/: sjtu_drone.sdf
sjtu_drone_description/src/: pid_controller.cpp  plugin_drone.cpp  plugin_drone_private.cpp
sjtu_drone_description/urdf/: sjtu_drone.urdf  sjtu_drone.urdf.xacro
src/: drone_object_ros.cpp  pid_controller.cpp  plugin_drone.cpp  plugin_ros_cam.cpp  plugin_ros_imu.cpp  plugin_ros_imu_native.cpp  plugin_ros_init.cpp  plugin_ros_sonar.cpp  spawn_drone.cpp  teleop_twist_keyboard.py  util_ros_cam.cpp
